--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.3",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.563.0",
     "mapbox-gl": "^3.18.1",
     "mongoose": "^9.1.5",
     "next": "16.1.6",
