--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.4",
     "jsonwebtoken": "^9.0.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "mapbox-gl": "^3.18.1",
     "mongoose": "^9.1.5",
     "next": "16.1.6",
+    "openai": "^6.19.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-leaflet": "^5.0.0",
